# basiliskk

./: Cargo.toml  build.rs
.github/: release-drafter.yml
.github/workflows/: audit.yaml  cache.yaml  cargo.yaml  github-actions.yaml  lint.yaml  release-drafter.yaml  scheduled.yaml  test.yaml
basiliskk-config/: Cargo.toml
basiliskk-config/src/: lib.rs
basiliskk-logger/: Cargo.toml
basiliskk-logger/src/: lib.rs
src/: adapter.rs  domain.rs  main.rs
src/adapter/: codec.rs  listener.rs
src/domain/: client.rs  error.rs  listener.rs  model.rs
src/domain/client/: google_ime.rs
src/domain/model/: request.rs  request_body.rs  request_header.rs
src/infra/: logger.rs
src/infra/client/: google_ime.rs
src/infra/logger/: layer.rs
