[package]
name = "basiliskk"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
bytes = "1.5.0"
chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde"] }
encoding_rs = "0.8.33"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.194", features = ["serde_derive"] }
serde_json = "1.0.115"
serde_with = "3.4.0"
test-case = "3.3.1"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "net", "macros"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
