[package]
authors.workspace = true
edition.workspace = true
name = "basiliskk"
version.workspace = true

[dependencies]
shadow-rs.workspace = true

[build-dependencies]
shadow-rs.workspace = true

[workspace]
members = ["basiliskk-logger"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
basiliskk-logger.path = "basiliskk-logger"
shadow-rs = "0.33.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[workspace.package]
authors = ["pranc1ngpegasus"]
edition = "2021"
version = "0.0.0"
