[package]
authors.workspace = true
edition.workspace = true
name = "basiliskk"
version.workspace = true

[dependencies]
shadow-rs.workspace = true

[build-dependencies]
shadow-rs.workspace = true

[workspace]
members = ["basiliskk-config", "basiliskk-logger"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
basiliskk-config.path = "basiliskk-config"
basiliskk-logger.path = "basiliskk-logger"
serde = "1.0.210"
shadow-rs = "0.33.0"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[workspace.package]
authors = ["pranc1ngpegasus"]
edition = "2021"
version = "0.0.0"
